<resources>
    <string name="app_name">DevMobTP01</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Veuillez remplir le formulaire</string>
    <string name="name">Nom</string>
    <string name="validate">Valider</string>
    <string name="firstName">Prénom</string>
    <string name="age">Âge</string>
    <string name="domain">Domaine de compétences</string>
    <string name="num">Numéro de téléphone</string>
    <string name="isValidate">Vos données ont été pris en compte.</string>
    <string name="click">Cliquer pour la version avec xml</string>
    <string name="confirm">Confirmer ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="tldr">Vos informations</string>
    <string name="tapNum">Quel numéro appeler?</string>
    <string name="stationDep">Gare de départ</string>
    <string name="stationArr">Gare d\'arrivée</string>
    <string name="saisir">Saisir</string>
    <string name="result">Résultats</string>
    <string name="searchStation">Rechercher des horaires</string>
</resources>