<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".Exercice7">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="255dp"
        android:scaleX="0.3"
        android:scaleY="0.3"
        android:src="@drawable/phone" />

    <TextView
        android:id="@+id/appeler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:text="@string/tapNum" />

    <EditText
        android:id="@+id/phoneEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="phone"
        android:layout_margin="10dp"
        android:hint="@string/num" />

    <Button
        android:id="@+id/phoneValidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/validate" />

</LinearLayout>